--- a/.github/workflows/github-actions-demo_2.yml
+++ b/.github/workflows/github-actions-demo_2.yml
@@ -2,6 +2,18 @@ name: GitHub Actions Demo2
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
+  hello_world_job:
+    runs-on: ubuntu-latest
+    name: A job to say hello
+    steps:
+      - name: Hello world action step
+        id: hello
+        uses: actions/hello-world-docker-action@v2
+        with:
+          who-to-greet: 'Mona the Octocat'
+      # Use the output from the `hello` step
+      - name: Get the output time
+        run: echo "The time was ${{ steps.hello.outputs.time }}"
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
