--- a/.github/workflows/github-actions-demo_2.yml
+++ b/.github/workflows/github-actions-demo_2.yml
@@ -1,6 +1,6 @@
 name: GitHub Actions Demo2
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+on: [self_push]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
